toolchain/parse/src/module/snapshots/knot_parse__module__tests__module_declaration.snap
---
source: toolchain/parse/src/module/mod.rs
expression: ast
---
Module(
    Node(
        Module {
            imports: [],
            declarations: [
                Declaration(
                    Node(
                        Constant {
                            storage: Storage {
                                visibility: Public,
                                binding: Binding(
                                    Node(
                                        Binding(
                                            "foo",
                                        ),
                                        Range(
                                            Point(
                                                1,
                                                7,
                                            ),
                                            Point(
                                                1,
                                                9,
                                            ),
                                        ),
                                        (),
                                    ),
                                ),
                            },
                            value_type: None,
                            value: Expression(
                                Node(
                                    Primitive(
                                        Nil,
                                    ),
                                    Range(
                                        Point(
                                            1,
                                            13,
                                        ),
                                        Point(
                                            1,
                                            15,
                                        ),
                                    ),
                                    (),
                                ),
                            ),
                        },
                        Range(
                            Point(
                                1,
                                1,
                            ),
                            Point(
                                1,
                                15,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                16,
            ),
        ),
        (),
    ),
)
