toolchain/parse/src/module/snapshots/knot_parse__module__tests__module_empty.snap
---
source: toolchain/parse/src/module/mod.rs
expression: ast
---
Module(
    Node(
        Module {
            imports: [],
            declarations: [],
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                1,
            ),
        ),
        (),
    ),
)
